# dsrp-machine-learning-engineering-20262

./: .gitignore
module1-feature-engineering/: README.md  pyproject.toml
module1-feature-engineering/notebooks/: 01_feature_engineering_theory.ipynb  02_feature_pipeline_feast.ipynb  03_pipeline_entrenamiento.ipynb
module1-feature-engineering/platform/: Dockerfile.airflow  Dockerfile.mlflow  README.md  docker-compose.yml  requirements-airflow.txt
module1-feature-engineering/platform/dags/: feature_engineering_dag.py  feature_pipeline.py
module1-feature-engineering/platform/feature_repo/: feature_store.yaml  features.py
